<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_up_log_in_erro_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9f000000"
    android:orientation="vertical"
    android:padding="@dimen/default_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/popup"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_argue_call"
                android:padding="@dimen/default_padding"
                android:text="@string/error"
                android:textColor="@color/red_text"
                android:textSize="@dimen/default_heading_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/pop_up_tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/invalid_email_and_password"
                android:textColor="@color/default_text"
                android:textSize="@dimen/default_heading_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/pop_up_tv_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pop_up_button"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/close"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_heading_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>