<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
       >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/gs_pbp_image"
            android:background="@drawable/editprofile"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

        <fonts.HelveticaNeueCondensedBoldTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/playername"
            android:id="@+id/textView42"
            android:layout_gravity="center_vertical"
            android:textSize="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="#666666"
            android:textStyle="bold"
            android:layout_marginTop="-10dp" />

        <fonts.HelveticaNeueCondensedBoldTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="#1"
            android:id="@+id/textView43"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="-100dp"
            android:textColor="#999999"
            android:textSize="13dp" />

        <fonts.HelveticaNeueCondensedBoldTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/leaderboardpoints"
            android:id="@+id/textView44"
            android:textSize="15dp"
            android:layout_marginLeft="205dp"
            android:layout_gravity="center_vertical"
            android:textColor="#666666"
            android:textStyle="bold"
            android:layout_marginTop="-10dp" />

        <fonts.HelveticaNeueCondensedBoldTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pts"
            android:id="@+id/textView45"
            android:layout_marginTop="19dp"
            android:layout_marginLeft="-20dp"
            android:layout_gravity="bottom"
            android:textColor="#999999"
            android:textSize="12dp" />
    </LinearLayout>
</LinearLayout>
